adding login, logout, register

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body{
-    background: #baf7ff;
-    color: #f291e4;
+    background: #fafeff;
+    color: #e9b7e2;
     font-family: 'Courier New', Courier, monospace;
 }
 .room_list{
