--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>reg</h1>
-    <form action="" method="post">
-        {% csrf_token %}
-        {{form.as_div}}
-        <h2></h2>
-        <button type="submit" class="btn btn-primary">register</button>
-    </form>
+<div class="d-flex justify-content-center align-items-center" style="min-height: 85vh;">
+    <div class="card shadow p-4" style="width: 100%; max-width: 450px;">
+        <h2 class="text-center mb-4 text-success">Реєстрація</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="d-grid">
+                <button type="submit" class="btn btn-success">Зареєструватися</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
