--- a/static/css/style.css
+++ b/static/css/style.css
@@ -125,7 +125,7 @@ h2 {
     color: #004085;
 }
 
-form input, form select {
+form input, form select, form textarea {
     border-radius: 10px;
     padding: 10px;
     border: 1px solid #ced4da;
